--- a/.gitignore
+++ b/.gitignore
@@ -8,37 +8,27 @@
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
-/storybook-static
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-cypress.local.json
-.idea/
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.env
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# CircleCi template
-/_templates
-
-#local project notes
-*.notes
-
-#cypress artifacts
-/cypress/videos
-/cypress/screenshots
-/cypress/reports
-
-# tests and linter reports
-/reports
-
-/typedocs
+# vercel
+.vercel
