--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "test-releases",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:miszo/test-releases.git",
-  "author": "Miszo Radomski <miszo.radomski@gmail.com>",
-  "license": "MIT",
-  "private": true
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.22",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "typescript": "4.4.3"
+  }
 }
