--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "(is-ci && echo 'Skipping prepare on CI server') || husky install"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -14,9 +15,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "13.1.0",
+    "@commitlint/config-conventional": "13.1.0",
+    "@commitlint/lint": "13.1.0",
+    "@commitlint/load": "13.1.0",
+    "@commitlint/types": "13.1.0",
     "@types/react": "17.0.22",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "is-ci": "3.0.0",
+    "husky": "7.0.2",
     "typescript": "4.4.3"
   }
 }
