--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@commitlint/lint": "13.1.0",
     "@commitlint/load": "13.1.0",
     "@commitlint/types": "13.1.0",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.1",
     "@types/react": "17.0.22",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "is-ci": "3.0.0",
     "husky": "7.0.2",
+    "is-ci": "3.0.0",
+    "prettier": "2.4.1",
+    "semantic-release": "18.0.0",
     "typescript": "4.4.3"
   }
 }
