--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "lts-fermium"
+          node-version: "14.17"
       - name: Install dependencies
         run: yarn
       - name: Release
