--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: "14.17"
       - name: Install dependencies
-        run: yarn
+        run: npm ci
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
@@ -26,4 +26,4 @@ jobs:
           GIT_AUTHOR_EMAIL: ${{ secrets.BOT_EMAIL }}
           GIT_COMMITTER_NAME: ${{ secrets.BOT_NAME }}
           GIT_COMMITTER_EMAIL: ${{ secrets.BOT_EMAIL }}
-        run: npx semantic-release
+        run: npm run release
