--- a/.github/workflows/after-release.yml
+++ b/.github/workflows/after-release.yml
@@ -7,17 +7,7 @@ jobs:
     name: Create PR to develop
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          base: develop
-          branch: main
-          title: "chore: after release PR [skip ci]"
-          body: Automatic Pull Request created after the production release
-          committer: ${{ secrets.BOT_NAME }} <${{ secrets.BOT_EMAIL }}>
-          author: ${{ secrets.BOT_NAME }} <${{ secrets.BOT_EMAIL }}>
-          labels: ready for review
-          delete-branch: false
-          token: ${{ secrets.BOT_TOKEN }}
+        run: gh pr create --base develop --head main --title "chore: align develop after release [skip ci]" --body "Automatic Pull Request created after the production release" --label "ready for review"
+        env:
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
