--- a/.github/workflows/after-release.yml
+++ b/.github/workflows/after-release.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Create Pull Request
-        run: gh pr create --base develop --head main --title "chore: align develop after release [skip ci]" --body "Automatic Pull Request created after the production release" --label "ready for review"
+        run: |
+          gh pr create --base develop --head main --title "chore: align develop after release [skip ci]" --body "Automatic Pull Request created after the production release" --label "ready for review"
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
